--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-PASSWORDS='{"user_admin_password": "qazwsx"}'
-USERS='{"admin": {"password": "qazwsx", "stock_changing": "True", "mold_status_changing": "True", "molds_and_boms_data_changing": "True"},
-        "user": {"password": "qq22", "stock_changing": "True", "mold_status_changing": "True", "molds_and_boms_data_changing": "False"}}'
+USERS='{"admin": {"password": "qazwsx", "stock_changing": "True", "mold_status_changing": "True", "molds_and_boms_data_changing": "True", "attachments_changing": "True"},
+        "Bob": {"password": "qq22", "stock_changing": "True", "mold_status_changing": "True", "molds_and_boms_data_changing": "False", "attachments_changing": "True"}}'
