Update env file

--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 USERS='{"admin": {"password": "qazwsx", "stock_changing": "True", "mold_status_changing": "True", "molds_and_boms_data_changing": "True", "attachments_changing": "True"},
-        "Bob": {"password": "qq22", "stock_changing": "True", "mold_status_changing": "True", "molds_and_boms_data_changing": "False", "attachments_changing": "True"}}'
+        "guest": {"password": "1234", "stock_changing": "False", "mold_status_changing": "False", "molds_and_boms_data_changing": "False", "attachments_changing": "False"},
+        "IVyrodov": {"password": "i1_Vyr2", "stock_changing": "True", "mold_status_changing": "True", "molds_and_boms_data_changing": "True", "attachments_changing": "True"},
+        "GTretyak": {"password": "g7_Tret1", "stock_changing": "True", "mold_status_changing": "True", "molds_and_boms_data_changing": "False", "attachments_changing": "False"},
+        "KKirillova": {"password": "k1_Kir2", "stock_changing": "False", "mold_status_changing": "False", "molds_and_boms_data_changing": "False", "attachments_changing": "False"},
+        "SNovikov": {"password": "s2_Nov9", "stock_changing": "True", "mold_status_changing": "True", "molds_and_boms_data_changing": "True", "attachments_changing": "True"},
+        "DAverin": {"password": "d5_Ave1", "stock_changing": "True", "mold_status_changing": "True", "molds_and_boms_data_changing": "False", "attachments_changing": "False"}}'
